# zephyr

./: west.yml
boards/arduino/due/: arduino_due-pinctrl.dtsi  arduino_due.dts  board.cmake
boards/arduino/due/support/: openocd.cfg
boards/st/fahv3/: Kconfig.defconfig  Kconfig.fahv3  board.yml  fahv3.dts  fahv3.yaml
boards/st/fahv3/doc/: index.rst
boards/st/st25dv_mb1283_disco/: Kconfig.defconfig  st25dv_mb1283_disco.dts
boards/st/st25dv_mb1283_disco/docs/: index.rst
drivers/input/: input_gpio_qdec.c
dts/arm/atmel/: sam3x.dtsi
dts/arm/st/f7/: stm32f730.dtsi
dts/bindings/gpio/: arduino-due-header.yaml
include/zephyr/dt-bindings/dma/: atmel_sam3x_dma.h
samples/drivers/adc/adc_multichannel/: README.rst  prj.conf  sample.yaml
samples/drivers/adc/adc_multichannel/boards/: nucleo_f756zg.overlay
samples/drivers/adc/adc_multichannel/src/: main.c
samples/drivers/adc/adc_sequence/: arduino_due.overlay
samples/modules/lvgl/demos/: prj.conf
samples/modules/lvgl/demos/boards/: native_posix.overlay
samples/net/osc_sock_client/src/: main.c
samples/net/sockets/echo_client/: prj.conf
samples/net/wifi_sock_client/: CMakeLists.txt  prj.conf
samples/net/wifi_sock_client/src/: common.h  create_osc_pack.c  create_osc_pack.h  echo-client.c  echo-client.h  udp.c  wifi.c
samples/net/wifi_sock_client/src/tinyosc/: tinyosc.c
samples/subsys/tracing/: prj_ram.conf
scripts/tracing/: ctf2ctf.py  parse_ctf_ignore.py
soc/st/stm32/: soc.yml
soc/st/stm32/stm32f7x/: Kconfig.defconfig.stm32f730xx  Kconfig.soc
subsys/tracing/: tracing_backend_ram.c
(+1 files in other folders)
